# bazel-python-demo

./: .gitignore  BUILD.bazel  Jenkinsfile.bazel  README.md  hello.py
