pipeline {
    agent any
    
    environment {
        PROJECT_NAME = 'bazel-python-demo'
    }
    
    stages {
        stage('Setup Build Environment') {
            steps {
                echo 'Installing build tools with root permissions...'
                sh '''
                    # Try to run as root user (Jenkins container often allows this)
                    whoami
                    
                    # Update package lists and install build tools
                    apt-get update || (echo "Trying with different approach..." && sudo apt-get update)
                    apt-get install -y build-essential curl python3 python3-dev || sudo apt-get install -y build-essential curl python3 python3-dev
                    
                    # Verify installations
                    gcc --version
                    python3 --version
                    
                    echo "Build environment setup completed!"
                '''
            }
        }
        
        stage('Install Bazelisk') {
            steps {
                echo 'Installing Bazelisk...'
                sh '''
                    if ! command -v bazel &> /dev/null; then
                        echo "Installing Bazelisk..."
                        curl -L -o bazelisk "https://github.com/bazelbuild/bazelisk/releases/latest/download/bazelisk-linux-amd64"
                        chmod +x bazelisk
                        mkdir -p ~/bin
                        mv bazelisk ~/bin/bazel
                        export PATH="$HOME/bin:$PATH"
                        ~/bin/bazel version
                    else
                        echo "Bazel is already installed."
                        bazel version
                    fi
                '''
            }
        }
        
        stage('Checkout') {
            steps {
                echo 'Checking out Bazel Python code...'
                checkout scm
            }
        }
        
        stage('Build Hello Target') {
            steps {
                echo 'Building the hello target...'
                sh '''
                    export PATH="$HOME/bin:$PATH"
                    bazel build //:hello
                '''
            }
        }
        
        stage('Run Application') {
            steps {
                echo 'Running the Python application...'
                sh '''
                    export PATH="$HOME/bin:$PATH"
                    bazel run //:hello
                '''
            }
        }
    }
    
    post {
        always {
            echo 'Bazel pipeline completed!'
            sh '''
                export PATH="$HOME/bin:$PATH"
                bazel shutdown || true
            '''
        }
        success {
            echo 'Bazel build succeeded! 🎉'
            echo 'Python application ran successfully with Bazel!'
        }
        failure {
            echo 'Bazel build failed! ❌'
            echo 'Check the logs above for details.'
        }
    }
}